--- a/MDK-ARM/sss/sss.build_log.htm
+++ b/MDK-ARM/sss/sss.build_log.htm
@@ -22,7 +22,7 @@ Dialog DLL:      TCM.DLL V1.56.4.0
  
 <h2>Project:</h2>
 D:\stm32project\sss\MDK-ARM\sss.uvprojx
-Project File Date:  07/18/2024
+Project File Date:  07/19/2024
 
 <h2>Output:</h2>
 *** Using Compiler 'V6.22', folder: 'D:\Keil\Keil5\ARM\ARMCLANG\Bin'
@@ -33,32 +33,27 @@ Note: source file '../Core/Src/tim.c' - object file renamed from 'sss\tim.o' to 
 Note: source file '../Core/Src/stm32f4xx_it.c' - object file renamed from 'sss\stm32f4xx_it.o' to 'sss\stm32f4xx_it_1.o'.
 Note: source file '../Core/Src/usart.c' - object file renamed from 'sss\usart.o' to 'sss\usart_1.o'.
 Note: source file '../Core/Src/stm32f4xx_hal_msp.c' - object file renamed from 'sss\stm32f4xx_hal_msp.o' to 'sss\stm32f4xx_hal_msp_1.o'.
-Note: source file '../Core/Src/main.c' - object file renamed from 'sss\main.o' to 'sss\main_1.o'.
-Note: source file '../Core/Src/gpio.c' - object file renamed from 'sss\gpio.o' to 'sss\gpio_1.o'.
-Note: source file '../Core/Src/tim.c' - object file renamed from 'sss\tim.o' to 'sss\tim_1.o'.
-Note: source file '../Core/Src/usart.c' - object file renamed from 'sss\usart.o' to 'sss\usart_1.o'.
-Note: source file '../Core/Src/stm32f4xx_it.c' - object file renamed from 'sss\stm32f4xx_it.o' to 'sss\stm32f4xx_it_1.o'.
-Note: source file '../Core/Src/stm32f4xx_hal_msp.c' - object file renamed from 'sss\stm32f4xx_hal_msp.o' to 'sss\stm32f4xx_hal_msp_1.o'.
-compiling stm32f4xx_hal_msp.c...
-compiling stm32f4xx_it.c...
+Note: source file '../Core/Src/system_stm32f4xx.c' - object file renamed from 'sss\system_stm32f4xx.o' to 'sss\system_stm32f4xx_1.o'.
 assembling startup_stm32f407xx.s...
-compiling usart.c...
+compiling dma.c...
+compiling stm32f4xx_it.c...
 compiling gpio.c...
-../Core/Src/openmv.c(9): error: expected identifier or '('
-    9 | {
-      | ^
-1 error generated.
-compiling openmv.c...
-compiling main.c...
-compiling stm32f4xx_hal_rcc.c...
-compiling stm32f4xx_hal_rcc_ex.c...
+compiling usart.c...
 compiling tim.c...
+compiling pid.c...
+compiling stm32f4xx_hal_msp.c...
+compiling openmv.c...
+compiling steer.c...
+compiling main.c...
+compiling vofa.c...
+compiling stm32f4xx_hal_rcc_ex.c...
 compiling stm32f4xx_hal_flash.c...
-compiling stm32f4xx_hal_flash_ramfunc.c...
+compiling stm32f4xx_hal_rcc.c...
 compiling stm32f4xx_hal_flash_ex.c...
+compiling stm32f4xx_hal_flash_ramfunc.c...
+compiling stm32f4xx_hal_tim_ex.c...
 compiling stm32f4xx_hal_gpio.c...
 compiling stm32f4xx_hal_dma_ex.c...
-compiling stm32f4xx_hal_tim_ex.c...
 compiling stm32f4xx_hal_pwr.c...
 compiling stm32f4xx_hal_dma.c...
 compiling stm32f4xx_hal_pwr_ex.c...
@@ -66,15 +61,12 @@ compiling stm32f4xx_hal_cortex.c...
 compiling stm32f4xx_hal.c...
 compiling stm32f4xx_hal_exti.c...
 compiling system_stm32f4xx.c...
-compiling main.c...
-compiling gpio.c...
 compiling stm32f4xx_hal_tim.c...
-compiling tim.c...
-compiling stm32f4xx_it.c...
-compiling usart.c...
-compiling stm32f4xx_hal_msp.c...
 compiling stm32f4xx_hal_uart.c...
-"sss\sss.axf" - 1 Error(s), 0 Warning(s).
+linking...
+Program Size: Code=16220 RO-data=476 RW-data=24 ZI-data=2464  
+FromELF: creating hex file...
+"sss\sss.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -98,8 +90,7 @@ Package Vendor: Keil
 
    * Component: ARM::CMSIS:CORE@6.1.0
       Include file:  CMSIS/Core/Include/tz_context.h
-Target not created.
-Build Time Elapsed:  00:00:01
+Build Time Elapsed:  00:00:02
 </pre>
 </body>
 </html>
